# ptera-game-lp

./: Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: build-and-deploy.yml  pr_check.yml
src/: app.rs  components.rs  main.rs
src/components/: about_tech.rs  appeal.rs  best_feature.rs  description.rs  download_links.rs  footer.rs  game_material_link.rs  game_play.rs  materials.rs  top.rs
