[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.58"
console_error_panic_hook = "0.1.7"
derive_more = "0.99.17"
gloo-utils = "0.1.3"
log = "0.4.17"
once_cell = "1.10.0"
reqwasm = "0.5.0"
serde = {version = "1.0.137", features = ["derive"]}
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
wasm-logger = "0.2.0"
yew = "0.19"
yew-hooks = "0.1.56"
yew-router = "0.16"
